--- a/css/main.scss
+++ b/css/main.scss
@@ -2949,8 +2949,9 @@ input::-moz-focus-outer {
 		}
 	}
 	.page-vntop__note {
-		background: url(../imgs/vntop/bg-luu-y-quan-trong.png) no-repeat;
+		background: url(../imgs/vntop/bg-vn-top.png) no-repeat;
 		background-position: center;
+		background-size: contain;
 		padding: 140px 0;
 		.page-vntop__note-parent {
 			display: flex;
