--- a/css/responsive.scss
+++ b/css/responsive.scss
@@ -714,6 +714,12 @@ $gray: #e7edf8;
 
         }
     }
+    .page-vntop {
+		.page-vntop__note {
+			padding: 80px 0;
+			background-size: cover;
+		}
+	}
 }
 
 @media (max-width: 992.98px) {
