--- a/css/responsive.scss
+++ b/css/responsive.scss
@@ -229,7 +229,8 @@ $gray: #e7edf8;
 	}
 	.page-vntop {
 		.page-vntop__note {
-			padding: 160px 0 50px;
+			padding: 72px 0 54px;
+			background-size: cover;
 		}
 	}
 }
