--- a/css/responsive.css
+++ b/css/responsive.css
@@ -140,7 +140,8 @@
   }
 
   .page-vntop .page-vntop__note {
-    padding: 160px 0 50px;
+    padding: 72px 0 54px;
+    background-size: cover;
   }
 }
 @media (max-width: 1200.98px) {
